--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ main{
   margin: 0 auto;
 }  
 .newsletter-form{
-  color: #666666;
+  color: greenyellow;
   border: 1px solid #cccccc;
   padding: 10px;
   border-radius: 3px;
