--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 img {
     /*display: block;*/
-    width: 100%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     border-top: 5px solid black;
@@ -185,7 +185,9 @@ h2 {
 
 a {
   text-decoration: none;
-  padding-right: 10%;
+  padding-right: 5%;
+  padding-left: 7%;
+  
 }
 
 h3 {
